--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 	"package": "Single Axis",
 	"language": "python",
 	"author": "MakotoNinja",
-	"description": "Move a single axis.",
-	"version": "1.0.32",
+	"description": "Move a single axis to absolute poisiton.",
+	"version": "1.0.33",
 	"min_os_version_major": 6,
 	"url": "https://raw.githubusercontent.com/MakotoNinja/SingleAxis/master/manifest.json",
 	"zip": "https://github.com/MakotoNinja/SingleAxis/archive/master.zip",
