--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,18 @@
 	"language": "python",
 	"author": "MakotoNinja",
 	"description": "A weeding routine for Farmbot.",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"min_os_version_major": 6,
 	"url": "https://raw.githubusercontent.com/MakotoNinja/weeder-routine/master/manifest.json",
 	"zip": "https://github.com/MakotoNinja/weeder-routine/archive/master.zip",
 	"executable": "python",
 	"args": ["weeder-routine-master/script.py"],
 	"config": [
-		{"name": "x_max", "label": "Max X", "value": 0 },
-		{"name": "y_max", "label": "Max Y", "value": 0 },
-		{"name": "z_max", "label": "Max Z", "value": 0 },
 		{"name": "x_start", "label": "Start X", "value": 0 },
 		{"name": "y_start", "label": "Start Y", "value": 0 },
+		{"name": "x_max", "label": "Max X (The Furthestt the robot can tracel in the X direction)", "value": 0 },
+		{"name": "y_max", "label": "Max Y (The Furthestt the robot can tracel in the Y direction)", "value": 0 },
+		{"name": "z_max", "label": "Max Z (The Furthestt the robot can tracel in the Z direction)", "value": 0 },
 		{"name": "x_move", "label": "X Move Increment", "value": 300 },
 		{"name": "y_move", "label": "Y Move Increment", "value": 250 }
 	]
