--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"language": "python",
 	"author": "MakotoNinja",
 	"description": "A weeding routine for Farmbot.",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"min_os_version_major": 6,
 	"url": "https://raw.githubusercontent.com/MakotoNinja/weeder-routine/master/manifest.json",
 	"zip": "https://github.com/MakotoNinja/weeder-routine/archive/master.zip",
@@ -12,9 +12,9 @@
 	"config": [
 		{"name": "x_start", "label": "Start X", "value": 0 },
 		{"name": "y_start", "label": "Start Y", "value": 0 },
-		{"name": "x_max", "label": "Max X (The Furthestt the robot can tracel in the X direction)", "value": 0 },
-		{"name": "y_max", "label": "Max Y (The Furthestt the robot can tracel in the Y direction)", "value": 0 },
-		{"name": "z_max", "label": "Max Z (The Furthestt the robot can tracel in the Z direction)", "value": 0 },
+		{"name": "x_max", "label": "Max X (The Furthest the robot can travel on the X axis)", "value": 0 },
+		{"name": "y_max", "label": "Max Y (The Furthest the robot can travel on the Y axis)", "value": 0 },
+		{"name": "z_max", "label": "Max Z (The Furthest the robot can travel on the Z axis)", "value": 0 },
 		{"name": "x_move", "label": "X Move Increment", "value": 300 },
 		{"name": "y_move", "label": "Y Move Increment", "value": 250 }
 	]
