--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"language": "python",
 	"author": "MakotoNinja",
 	"description": "A weeding routine for Farmbot.",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"min_os_version_major": 6,
 	"url": "https://raw.githubusercontent.com/MakotoNinja/weeder-routine/master/manifest.json",
 	"zip": "https://github.com/MakotoNinja/weeder-routine/archive/master.zip",
@@ -16,6 +16,8 @@
 		{"name": "y_max", "label": "Max Y (The Furthest the robot can travel on the Y axis)", "value": 0 },
 		{"name": "z_max", "label": "Max Z (The Furthest the robot can travel on the Z axis)", "value": 0 },
 		{"name": "x_move", "label": "X Move Increment", "value": 300 },
-		{"name": "y_move", "label": "Y Move Increment", "value": 250 }
+		{"name": "y_move", "label": "Y Move Increment", "value": 250 },
+		{"name": "tool_water", "label": "Water Tool Retrieval Sequence (Optional, if used, will water weed area to losen soil)", "value": "" },
+		{"name": "tool_weed", "label": "Weed Tool Retrieval Sequence", "value": 250 }
 	]
 }
