--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,6 @@
 		{"name": "x_move", "label": "X Move Increment", "value": 300 },
 		{"name": "y_move", "label": "Y Move Increment", "value": 250 },
 		{"name": "tool_water", "label": "Water Tool Retrieval Sequence (Optional, if used, will water weed area to losen soil)", "value": "" },
-		{"name": "tool_weed", "label": "Weed Tool Retrieval Sequence", "value": " }
+		{"name": "tool_weed", "label": "Weed Tool Retrieval Sequence", "value": " " }
 	]
 }
