added inputs to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
 		{"name": "y_start", "label": "Start Y", "value": 0 },
 		{"name": "x_max", "label": "Max X (The Furthest the robot can travel on the X axis)", "value": 0 },
 		{"name": "y_max", "label": "Max Y (The Furthest the robot can travel on the Y axis)", "value": 0 },
-		{"name": "z_max", "label": "Max Z (The Furthest the robot can travel on the Z axis, weed smushing depth)", "value": 0 },
+		{"name": "z_translate", "label": "Z axis height while traveling from point to point", "value": 0 },
+		{"name": "y_move", "label": "Y Move Increment (Y axis movement when scanning)", "value": 250 }
 		{"name": "x_move", "label": "X Move Increment (X axis movement when scanning)", "value": 300 },
 		{"name": "y_move", "label": "Y Move Increment (Y axis movement when scanning)", "value": 250 },
 		{"name": "tool_water_retrieve", "label": "Water Tool Retrieval Sequence (Optional, if not None, will water weed area to losen soil)", "value": "None" },
@@ -23,6 +24,7 @@
 		{"name": "tool_weed_return", "label": "Weed Tool Return Sequence", "value": "" },
 		{"name": "num_stabs", "label": "Number of stabs at each weed. Will apply a small offset on each stab.", "value": 5},
 		{"name": "ran_min", "label": "X/Y Random Movement Minimum (MM)", "value": 5 },
-		{"name": "ran_max", "label": "X/Y Random Movement Maximum (MM)", "value": 10 }
+		{"name": "ran_max", "label": "X/Y Random Movement Maximum (MM)", "value": 10 },
+		{"name": "z_retract", "label": "Distance to retract UTM between stabs", "value": 100 }
 	]
 }
