--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"language": "python",
 	"author": "MakotoNinja",
 	"description": "A weeding routine for Farmbot.",
-	"version": "1.0.7",
+	"version": "1.0.8",
 	"min_os_version_major": 6,
 	"url": "https://raw.githubusercontent.com/MakotoNinja/weeder-routine/master/manifest.json",
 	"zip": "https://github.com/MakotoNinja/weeder-routine/archive/master.zip",
@@ -12,10 +12,10 @@
 	"config": [
 		{"name": "x_start", "label": "Start X", "value": 0 },
 		{"name": "y_start", "label": "Start Y", "value": 0 },
-		{"name": "x_max", "label": "Max X (The Furthest the robot can travel on the X axis)", "value": 0 },
-		{"name": "y_max", "label": "Max Y (The Furthest the robot can travel on the Y axis)", "value": 0 },
+		{"name": "x_max", "label": "Max X (The Furthest you want to travel on the X axis)", "value": 0 },
+		{"name": "y_max", "label": "Max Y (The Furthest you want to travel on the Y axis)", "value": 0 },
+		{"name": "z_max", "label": "Max Z (The furthest you want to travel on the Z axis, weed smushing depth)", "value": 0 },
 		{"name": "z_translate", "label": "Z axis height while traveling from point to point", "value": 0 },
-		{"name": "y_move", "label": "Y Move Increment (Y axis movement when scanning)", "value": 250 },
 		{"name": "x_move", "label": "X Move Increment (X axis movement when scanning)", "value": 300 },
 		{"name": "y_move", "label": "Y Move Increment (Y axis movement when scanning)", "value": 250 },
 		{"name": "tool_water_retrieve", "label": "Water Tool Retrieval Sequence (Optional, if not None, will water weed area to losen soil)", "value": "None" },
