--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,26 @@
 {
-	"package": "Weeder Routine",
+	"package": "Weed Zapper",
 	"language": "python",
 	"author": "MakotoNinja",
 	"description": "A weeding routine for Farmbot.",
-	"version": "1.0.8",
+	"version": "1.0.1",
 	"min_os_version_major": 6,
-	"url": "https://raw.githubusercontent.com/MakotoNinja/weeder-routine/master/manifest.json",
-	"zip": "https://github.com/MakotoNinja/weeder-routine/archive/master.zip",
+	"url": "https://raw.githubusercontent.com/MakotoNinja/weeder-zapper/master/manifest.json",
+	"zip": "https://github.com/MakotoNinja/weeder-zapper/archive/master.zip",
 	"executable": "python",
-	"args": ["weeder-routine-master/script.py"],
+	"args": ["weeder-zapper-master/script.py"],
 	"config": [
 		{"name": "x_start", "label": "Start X", "value": 0 },
 		{"name": "y_start", "label": "Start Y", "value": 0 },
-		{"name": "x_max", "label": "Max X (The Furthest you want to travel on the X axis)", "value": 0 },
-		{"name": "y_max", "label": "Max Y (The Furthest you want to travel on the Y axis)", "value": 0 },
-		{"name": "z_max", "label": "Max Z (The furthest you want to travel on the Z axis, weed smushing depth)", "value": 0 },
+		{"name": "x_max", "label": "Max X (The Furthest you want to scan on the X axis)", "value": 0 },
+		{"name": "y_max", "label": "Max Y (The Furthest you want to scan on the Y axis)", "value": 0 },
+		{"name": "zap_height", "label": "Zap Height (The height at which to zap weeds)", "value": 0 },
 		{"name": "z_translate", "label": "Z axis height while traveling from point to point", "value": 0 },
 		{"name": "x_move", "label": "X Move Increment (X axis movement when scanning)", "value": 300 },
 		{"name": "y_move", "label": "Y Move Increment (Y axis movement when scanning)", "value": 250 },
-		{"name": "tool_water_retrieve", "label": "Water Tool Retrieval Sequence (Optional, if not None, will water weed area to losen soil)", "value": "None" },
-		{"name": "tool_water_return", "label": "Water Tool Return Sequence", "value": "None" },
 		{"name": "tool_weed_retrieve", "label": "Weed Tool Retrieval Sequence", "value": "" },
 		{"name": "tool_weed_return", "label": "Weed Tool Return Sequence", "value": "" },
-		{"name": "num_stabs", "label": "Number of stabs at each weed. Will apply a small offset on each stab.", "value": 5},
-		{"name": "ran_min", "label": "X/Y Random Movement Minimum (MM)", "value": 5 },
-		{"name": "ran_max", "label": "X/Y Random Movement Maximum (MM)", "value": 10 },
-		{"name": "z_retract", "label": "Distance to retract UTM between stabs", "value": 100 },
+		{"name": "area_size", "label": "Size of Zap Area (MM SQ)", "value": 5 },
 		{"name": "weed_type", "label": "Weed Type (WEED, SAFE-REMOVE, BOTH)", "value": "WEED" }
 	]
 }
