--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"language": "python",
 	"author": "MakotoNinja",
 	"description": "A weeding routine for Farmbot.",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"min_os_version_major": 6,
 	"url": "https://raw.githubusercontent.com/MakotoNinja/weed-zapper/master/manifest.json",
 	"zip": "https://github.com/MakotoNinja/weed-zapper/archive/master.zip",
@@ -15,6 +15,7 @@
 		{"name": "x_max", "label": "Max X (The Furthest you want to scan on the X axis)", "value": 0 },
 		{"name": "y_max", "label": "Max Y (The Furthest you want to scan on the Y axis)", "value": 0 },
 		{"name": "zap_height", "label": "Zap Height (The height at which to zap weeds)", "value": 0 },
+		{"name": "zap_speed", "label": "Zap Speed", "value": 1 },
 		{"name": "z_translate", "label": "Z axis height while traveling from point to point", "value": 0 },
 		{"name": "x_move", "label": "X Move Increment (X axis movement when scanning)", "value": 300 },
 		{"name": "y_move", "label": "Y Move Increment (Y axis movement when scanning)", "value": 250 },
