--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
 		{"name": "y_max", "label": "Max Y (The Furthest you want to scan on the Y axis)", "value": 0 },
 		{"name": "zap_height", "label": "Zap Height (The height at which to zap weeds)", "value": 0 },
 		{"name": "zap_speed", "label": "Zap Speed", "value": 1 },
+		{"name": "zap_timeout", "label": "Zap Timeout (Milliseconds Between Steps)", "value": 250 },
 		{"name": "z_translate", "label": "Z axis height while traveling from point to point", "value": 0 },
 		{"name": "x_move", "label": "X Move Increment (X axis movement when scanning)", "value": 300 },
 		{"name": "y_move", "label": "Y Move Increment (Y axis movement when scanning)", "value": 250 },
